crates/oxc_css_parser/tests/error/scss/at-rule/function/varargs-with-default.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `)`, but found `:`
  ┌─ varargs-with-default.scss:1:25
  │
1 │ @function test($param...:"default") {}
  │                         ^


